fix spacing

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -38,7 +38,8 @@
   .hero2 {
     width: 70%;
     @include b.breakpoint("700") {
-      width: 90%;
+      width: 100%;
+      padding: 0.2rem 0.5rem;
     }
     h1 {
       font-size: 60px;
